--- a/ch3/useEigen/CMakeLists.txt
+++ b/ch3/useEigen/CMakeLists.txt
@@ -4,6 +4,10 @@ project( useEigen )
 set( CMAKE_BUILD_TYPE "Release" )
 set( CMAKE_CXX_FLAGS "-O3" )
 
+# set debug mode
+#set( CMAKE_BUILD_TYPE "Debug" )
+#set( CMAKE_CXX_FLAGS )
+
 # 添加Eigen头文件
 include_directories( "/usr/include/eigen3" )
 
