--- a/ch5/joinMap/CMakeLists.txt
+++ b/ch5/joinMap/CMakeLists.txt
@@ -16,5 +16,8 @@ find_package( PCL REQUIRED COMPONENT common io )
 include_directories( ${PCL_INCLUDE_DIRS} )
 add_definitions( ${PCL_DEFINITIONS} )
 
+# qt
+find_package(Qt5 REQUIRED Test Concurrent)
+
 add_executable( joinMap joinMap.cpp )
 target_link_libraries( joinMap ${OpenCV_LIBS} ${PCL_LIBRARIES} )
